UX improved about mail and domains

--- a/locales/en.json
+++ b/locales/en.json
@@ -61,6 +61,7 @@
     "appslist_retrieve_error": "Unable to retrieve the remote application list {appslist:s}: {error:s}",
     "appslist_unknown": "Application list {appslist:s} unknown.",
     "appslist_url_already_tracked": "There is already a registered application list with url {url:s}.",
+    "ask_domain": "Choose a domain",
     "ask_current_admin_password": "Current administration password",
     "ask_email": "Email address",
     "ask_firstname": "First name",
@@ -174,7 +175,7 @@
     "domain_dyndns_invalid": "Invalid domain to use with DynDNS",
     "domain_dyndns_root_unknown": "Unknown DynDNS root domain",
     "domain_exists": "Domain already exists",
-    "domain_hostname_failed": "Failed to set new hostname. This might cause issue later (not sure about it... it might be fine).",
+    "domain_hostname_failed": "Failed to set new hostname",
     "domain_uninstall_app_first": "One or more apps are installed on this domain. Please uninstall them before proceeding to domain removal",
     "domain_unknown": "Unknown domain",
     "domain_zone_exists": "DNS zone file already exists",
